add endpoint transactions and report
