# internal/models/report_model.go
@@ -1,0 +1,12 @@
+package models
+
+type BestSeller struct {
+	Nama       string `json:"nama"`
+	QtyTerjual int    `json:"qty_terjual"`
+}
+
+type SalesReport struct {
+	TotalRevenue   int        `json:"total_revenue"`
+	TotalTransaksi int        `json:"total_transaksi"`
+	ProdukTerlaris BestSeller `json:"produk_terlaris"`
+}
